--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build-lin:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,17 +18,27 @@ jobs:
       with:
         go-version: 1.18
 
-    - name: Build Windows binary
-      run: GOOS=windows GOARCH=amd64 go build -o win-amd64-IC2cropbruteforcer
     - name: Build Linux binary
       run: go build -o lin-amd64-IC2cropbruteforcer
-    - name: Upload Windows artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: Windows binary
-        path: win-amd64-IC2cropbruteforcer
     - name: Upload Linux artifacts
       uses: actions/upload-artifact@v2
       with:
         name: Linux binary
         path: lin-amd64-IC2cropbruteforcer
+  build-win:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: 1.18
+
+    - name: Build Windows binary
+      run: GOOS=windows go build -o win-amd64-IC2cropbruteforcer
+    - name: Upload Windows artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: Windows binary
+        path: win-amd64-IC2cropbruteforcer
