--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,18 +36,13 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
-    - uses: actions/checkout@v3
-
     - uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
         update: true
-        install: mingw-w64-x86_64-gtk3
+        install: mingw-w64-x86_64-gtk3 mingw-w64-x86_64-go
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
+    - uses: actions/checkout@v3
 
     - name: Build Windows binary
       run: GOOS=windows GOARCH=amd64 go build -o win-amd64-IC2cropbruteforcer
